--- a/workloads2/deploy.yaml
+++ b/workloads2/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: lasample
+  namespace: jbsample
   labels:
     app: nginx
 spec:
